syntax = "proto3";

option csharp_namespace = "ChatApp";

package chat;
import "google/protobuf/empty.proto";

message MessageRequest {
  string username = 1;
  string message = 2;
}

message MessageResponse {
  string username = 1;
  string message = 2;
}

service ChatService {
  rpc SendMessage(MessageRequest) returns (MessageResponse);
  rpc Subscribe(stream SubscribeRequest) returns (stream Message);  
}

message SubscribeRequest {
  string subscriber_name = 1;
}

message Message {
  string content = 1;
}